k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tepslab
  labels:
    name: tepslab
    environment: production
